unpackaged/main/default/objects/API_Connector__Intuiz_Web_Service_Setting__c/API_Connector__Intuiz_Web_Service_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This setting will be used to store credentials for IWS Service</description>
    <label>Intuiz Web Service Setting</label>
</CustomObject>