unpackaged/main/default/objects/API_Connector__Intuiz_Web_Service_Setting__c/fields/API_Connector__IsActive__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>