unpackaged/main/default/objects/API_Connector__Intuiz_Web_Service_Setting__c/fields/API_Connector__Ref_Client_Url_Param__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Ref_Client_Url_Param__c</fullName>
    <description>This field is used to store the value of url parameter &quot;refClient&quot; for IWS Service</description>
    <label>Ref Client Url Param</label>
    <length>255</length>
    <type>Text</type>
</CustomField>