unpackaged/main/default/objects/API_Connector__Intuiz_Web_Service_Setting__c/fields/API_Connector__Siren_Number_Input_Field__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Siren_Number_Input_Field__c</fullName>
    <label>Siren Number Input Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>