unpackaged/main/default/objects/API_Connector__Intuiz_Web_Service_Setting__c/fields/API_Connector__Status__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Status__c</fullName>
    <description>This field is used to store the status of the output field mapping</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>